--- a/location.html
+++ b/location.html
@@ -44,7 +44,7 @@ div.desc {
 </h1>
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <a href="amore.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
